--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,10 +59,13 @@
 
         console.log("Uploading to backend...");
 
-        const response = await fetch("http://127.0.0.1:5000/upscale", {
-          method: "POST",
-          body: formData,
-        });
+        const response = await fetch(
+          "https://upscale-backend-wi6b.onrender.com/upscale",
+          {
+            method: "POST",
+            body: formData,
+          }
+        );
 
         console.log("Backend response status:", response.status);
 
